Ensure courthouse display name is used in data returned from APIs